--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -26,7 +26,7 @@ body {
 .main-wrapper {
   display: grid;
   min-height: 85vh;
-  grid-template-rows: 1fr auto;
+  grid-template-rows: 1fr min-content;
   grid-template-columns: 1fr;
   grid-template-areas: 'main' 'footer';
 }
@@ -40,7 +40,7 @@ body {
 main {
   grid-area: main;
   display: grid;
-  grid-template-rows: minmax(30vh,100%) auto;
+  grid-template-rows: minmax(40vh, auto) min-content;
   grid-template-areas: 'banner' 'content';
   margin: 0;
   padding: 0;
